diesel_compile_tests/tests/fail/distinct_on_clause_only_supported_for_pg.stderr
error[E0277]: `DistinctOnClause<columns::name>` is no valid SQL fragment for the `Sqlite` backend
    --> tests/fail/distinct_on_clause_only_supported_for_pg.rs:16:41
     |
  LL |     users.distinct_on(name).get_results(&mut sqlite_connection);
     |                             ----------- ^^^^^^^^^^^^^^^^^^^^^^ the trait `QueryFragment<Sqlite>` is not implemented for `DistinctOnClause<columns::name>`
     |                             |
     |                             required by a bound introduced by this call
     |
     = note: this usually means that the `Sqlite` database system does not support 
             this SQL syntax
help: the trait `QueryFragment<Sqlite, diesel::query_builder::private::NotSpecialized>` is not implemented for `DistinctOnClause<columns::name>`
      but trait `QueryFragment<Pg, diesel::query_builder::private::NotSpecialized>` is implemented for it
    --> DIESEL/diesel/diesel/src/pg/query_builder/distinct_on.rs
     |
 LL | / impl<T> QueryFragment<Pg> for DistinctOnClause<T>
 LL | | where
 LL | |     T: QueryFragment<Pg>,
     | |_________________________^
     = help: for that trait implementation, expected `Pg`, found `Sqlite`
     = note: required for `SelectStatement<FromClause<table>, ..., ...>` to implement `QueryFragment<Sqlite, AnsiSqlSelectStatement>`
     = note: 1 redundant requirement hidden
     = note: required for `SelectStatement<FromClause<table>, ..., ...>` to implement `QueryFragment<Sqlite>`
     = note: required for `SelectStatement<FromClause<table>, ..., ...>` to implement `LoadQuery<'_, diesel::SqliteConnection, _>`
note: required by a bound in `get_results`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_results<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ----------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_results`
  
     
error[E0277]: `DistinctOnClause<columns::name>` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/distinct_on_clause_only_supported_for_pg.rs:21:41
     |
  LL |     users.distinct_on(name).get_results(&mut mysql_connection);
     |                             ----------- ^^^^^^^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql>` is not implemented for `DistinctOnClause<columns::name>`
     |                             |
     |                             required by a bound introduced by this call
     |
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
help: the trait `QueryFragment<Mysql, diesel::query_builder::private::NotSpecialized>` is not implemented for `DistinctOnClause<columns::name>`
      but trait `QueryFragment<Pg, diesel::query_builder::private::NotSpecialized>` is implemented for it
    --> DIESEL/diesel/diesel/src/pg/query_builder/distinct_on.rs
     |
 LL | / impl<T> QueryFragment<Pg> for DistinctOnClause<T>
 LL | | where
 LL | |     T: QueryFragment<Pg>,
     | |_________________________^
     = help: for that trait implementation, expected `Pg`, found `Mysql`
     = note: required for `SelectStatement<FromClause<table>, ..., ...>` to implement `QueryFragment<Mysql, AnsiSqlSelectStatement>`
     = note: 1 redundant requirement hidden
     = note: required for `SelectStatement<FromClause<table>, ..., ...>` to implement `QueryFragment<Mysql>`
     = note: required for `SelectStatement<FromClause<table>, ..., ...>` to implement `LoadQuery<'_, diesel::MysqlConnection, _>`
note: required by a bound in `get_results`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_results<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ----------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_results`
  
     For more information about this error, try `rustc --explain E0277`.
